updated file names

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pokédex Gen 1</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="index.css">
 </head>
 <body>
   <div class="pokedex-container">
@@ -24,6 +24,6 @@
     <main class="pokemon-grid" id="pokemon-grid">
     </main>
   </div>
-  <script src="app.js"></script>
+  <script src="index.js"></script>
 </body>
 </html>
