egg group added

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
         <option value="asc">ID oplopend</option>
         <option value="desc">ID aflopend</option>
       </select>
+      <select id="egg-group-filter">
+        <option value="">egg group</option>
+      </select>
       <button id="reset-filters">Reset filters</button>
     </header>
 
