added stat slider

--- a/index.html
+++ b/index.html
@@ -22,6 +22,25 @@
         <option value="">egg group</option>
       </select>
       <button id="reset-filters">Reset filters</button>
+      <select id="stat-filter">
+  <option value="">Filter op stat</option>
+  <option value="hp">HP</option>
+  <option value="attack">Attack</option>
+  <option value="defense">Defense</option>
+  <option value="special-attack">Special Attack</option>
+  <option value="special-defense">Special Defense</option>
+  <option value="speed">Speed</option>
+</select>
+
+<select id="stat-tier">
+  <option value="">Alle sterktes</option>
+  <option value="high">Hoog (120+)</option>
+  <option value="medium">Gemiddeld (81-119)</option>
+  <option value="low">Laag (≤80)</option>
+</select>
+
+
+
     </header>
 
     <main class="pokemon-grid" id="pokemon-grid">
