--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 
 <select id="stat-tier">
   <option value="">Alle sterktes</option>
-  <option value="high">Hoog (120+)</option>
-  <option value="medium">Gemiddeld (81-119)</option>
-  <option value="low">Laag (≤80)</option>
+  <option value="high">Hoog</option>
+  <option value="medium">Gemiddeld</option>
+  <option value="low">Laag</option>
 </select>
 
 
